ドキュメントの更新 hsp3ext.h削除の取り消し
Former-commit-id: 67b38a7ac943dd343ff58038b694f09e65534f37

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -31,6 +31,7 @@
 					<li><a href="#ONEKEY_HELP">ワンキーヘルプ</a></li>
 					<li><a href="#START_DIR">起動ディレクトリ</a></li>
 					<li><a href="#HSP_MECHANISM">HSPのしくみ</a></li>
+					<li><a href="#EX_RUNTIME">拡張ランタイム<span class="new">（New!）</span></a></li>
 					<li><a href="#MAKE_EXE">実行ファイルの作成方法</a></li>
 					<li><a href="#EDIT_PACKFILE">PACKFILEの編集について</a></li>
 					<li><a href="#MAKE_SAVER">スクリーンセーバーの作成</a></li>
@@ -40,13 +41,12 @@
 					<li><a href="#HIDDEN_WINDOW">メインウィンドウ非表示EXEファイル</a></li>
 					<li><a href="#NO_DIR_MOVE">ディレクトリ移動の無効化</a></li>
 					<li><a href="#HSPEX_PLUGIN">HSP拡張プラグイン、拡張モジュール</a></li>
-					<li><a href="#EX_RUNTIME">拡張ランタイム</a></li>
 					<li><a href="#DEBUG_WINDOW">デバッグウィンドウ</a></li>
 					<li><a href="#EX_MACRO">HSP拡張マクロ</a></li>
 					<li><a href="#COLORING_AND_TAB">スクリプトの色分けとタブ</a></li>
-					<li><a href="#HSPLET">HSPLetの利用について<span class="new">（New!）</span></a></li>
+					<li><a href="#HSPLET">HSPLetの利用について</a></li>
 					<li><a href="#HSPMT">マルチスレッド対応版の利用について</a></li>
-					<li><a href="#EASY_INPUT">かんたん入力<span class="new">（New!）</span></a></li>
+					<li><a href="#EASY_INPUT">かんたん入力</a></li>
 					<li><a href="#PEAS_EDITOR">Peasエディタ</a></li>
 				</ol>
 			</li>
@@ -310,42 +310,8 @@
 			標準では、HSPヘルプマネージャによるヘルプ閲覧に設定されています。
 		</p>
 		<p>
-			HSPスクリプトエディタでは、この他にもhtmlによる表示、Windows HLP形式による表示や、HSPヘルプマネージャによる表示など、4つの形式をサポートしています。
-			HSPヘルプマネージャ形式以外は、対応するヘルプデータを別途用意して頂く必要があります。
-		</p>
-
-		<dl>
-			<dt>HSPヘルプマネージャ形式 (標準)</dt>
-			<dd><p>
-				ヘルプマネージャを呼び出してヘルプの表示を行ないます。
-				指定されたディレクトリにHELPMAN.EXEというファイルと、ヘルプデータ(hsファイル)が必要です。
-				標準で、ヘルプマネージャは、HSP Document Library(統合ドキュメントビューアー)に
-				キーワードを指定してヘルプを表示します。
-			</p></dd>
-
-			<dt> HTML形式 (オプション)</dt>
-			<dd><p>
-				ver2.5までの標準であるHTML形式ヘルプ表示を行ないます。
-				指定されたディレクトリに拡張子htmのヘルプファイルが必要になります。
-			</p></dd>
-
-			<dt>Windows HELP形式 (オプション)</dt>
-			<dd><p>
-				Windows標準のWinHelpによるヘルプ表示を行ないます。
-				HSP標準ではサポートされていませんが、ユーザーなどによって作られた
-				ヘルプデータの表示が可能です。キーワードによる検索に対応しています。
-				指定されたディレクトリにHSP.HLPというファイルが必要になります。
-			</p></dd>
-
-			<dt>Windows HTML HELP形式 (オプション)</dt>
-			<dd><p>
-				Windows98標準のHtmlHelpによるヘルプ表示を行ないます。
-				HSP標準ではサポートされていませんが、ユーザーなどによって作られた
-				ヘルプデータの表示が可能です。キーワードによる検索に対応しています。
-				指定されたディレクトリにHSP.CHMというファイルが必要になります。
-			</p></dd>
-		</dl>
-		<p>
+			標準で、ヘルプマネージャは、HSP Document Library(統合ドキュメントビューアー)に
+			キーワードを指定してヘルプを表示します。
 			これらは、HSPスクリプトエディタの「オプション」ダイアログにある「動作」メニューを選択して、
 			設定することが可能です。
 		</p>
@@ -410,11 +376,11 @@
 			<dt>実行</dt>
 			<dd>
 				<p>オブジェクトファイル(AXファイル)を読み込み、それを実行します。
-				(この部分は、HSP本体(HSP3.EXE)が行なっています)</p>
+				(この部分は、通常はHSP本体(HSP3.EXE)が行なっています)</p>
 
 				<p>ソーススクリプトのコンパイルは、瞬時に行なわれオブジェクトファイルを作成します。
 				オブジェクトファイルは、ソーススクリプトの余計な部分、コメントなどを排除して
-				コンパクトに、そして高速に実行できる形式になっています。</p>
+				コンパクトに、そして高速に実行できる形式になったバイナリデータを格納しています。</p>
 				<p>HSP本体は指定された	オブジェクトファイルを読み込み実行するための核となる部分です。
 				これはHSP3.EXEですべて行われますので、それ以外に余計なDLLやモジュールは必要としません。</p>
 				<p>もし、あなたがHSPで作ったソフトを配布したいと思ったら、単体で実行できるEXE(実行)
@@ -425,9 +391,71 @@
 				<p>バッチファイルやコマンドプロンプトから直接HSP3.EXEをファイル名指定
 				付きで実行させることもできます。<kbd>hsp3 demo.ax</kbd>
 				のように入力すると、"demo.ax"というオブジェクトファイルが実行されます。</p>
-				<p>HSPでは、HSP3.EXE以外にもいくつかの実行用ファイルが存在します。
-				これらは、「ランタイム」と呼ばれており、用途によりいくつかの種類が存在します。
-				詳しくは、「<a href="#EX_RUNTIME">拡張ランタイム</a>」の項目を参照してください。</p>
+				<p>HSPでは、HSP3.EXE以外にもいくつか拡張された実行用ファイルが存在します。
+				これらは、「HSPランタイム」と呼ばれており、用途によりいくつかの種類が存在します。
+				詳しくは、「<a href="#EX_RUNTIME">HSPランタイム</a>」の項目を参照してください。</p>
+			</dd>
+		</dl>
+
+
+		<h3 id="EX_RUNTIME">HSPランタイム</h3>
+		<p>
+			「HSPランタイム」は、HSPの動作システム全体を置き換えるための仕組みです。
+			これは、特定の用途、システムに依存した機能を利用するためのものです。<br>
+			たとえば、スクリプトエディタに「mes "OK"」とだけ書いた場合には、標準ランタイムと呼ばれる、
+			最も一般的な命令セットでHSPが動作します。(これがHSP3.EXEにあたります)
+			HSPランタイムは、プリプロセッサ命令「#runtime」によって、スクリプト中で指定します。
+			指定されたランタイムは、スクリプト実行時及び、実行ファイル作成時に反映されます。
+		</p>
+		<p> 
+			HSPでは用途に合わせて「HSPランタイム」を変更して使用する場面が出てきます。
+			たとえば、HSP3Dishランタイムは、マルチプラットフォーム化が可能な命令のみをサポートし、
+			それ以外の命令でエラーを返します。これにより、スマートフォンやタブレット等で動かす場合と、
+			同等の動作を確認することができるようになります。<br>
+			また、コンソール版HSP(HSPCL)ランタイムのようにウインドウ表示を行なわず、コマンドプロンプト上で
+			動作するようなシステムを選択することも可能です。
+		</p>
+		<p>
+			HSPランタイムは、HSPの機能を拡張したり変更するという意味で「HSP拡張プラグイン」に近いものですが、
+			「HSPランタイム」は、さらに深くHSP全体の機能を置き換えるものとして考えてください。
+			HSPフルセットには以下のHSPランタイムが同梱されています。
+			使用する際の参考にしてください。それぞれのランタイムごとの詳細は、別途マニュアルが用意されていますので、そちらを参照してください。
+		</p>
+		<dl>
+			<dt>コンソール版HSPランタイム(hsp3cl)</dt>
+			<dd>
+				<p>
+					コンソールアプリケーション専用の実行ファイルを作成する際に使用します。
+					ウインドウの表示や画像の操作などはサポートされていません。
+				</p>
+			</dd>
+			<dt>HSP3Dishランタイム(hsp3dish)</dt>
+			<dd>
+				<p>
+					スマートフォンやタブレットなど、マルチプラットフォーム化が可能な命令のみをサポートしています。
+					通常の描画命令の他に、拡張された命令が用意されています。また、描画速度も向上しています。
+				</p>
+			</dd>
+			<dt>HGIMG3ランタイム(hsp3hg)</dt>
+			<dd>
+				<p>
+					HGIMG3ランタイムで作成したアプリケーションの実行ファイルを作成する際に使用します。
+					通常の描画命令は使用できず、HGIMG3で用意された専用の命令を使用します。
+				</p>
+			</dd>
+			<dt>コンパクト版HSPランタイム(hsp3c)</dt>
+			<dd>
+				<p>
+					標準のHSP3から、COM関連機能、及びgrect、grotate、gsquare命令及び、PNGファイル読み込み機能が削除されています。
+					これらの機能が必要がない場合に実行ファイルをコンパクトにすることができます。
+				</p>
+			</dd>
+			<dt>マルチスレッド版HSPランタイム(hsp3mt)</dt>
+			<dd>
+				<p>
+					標準のHSPランタイムと同一ですが、マルチスレッド対応ライブラリを使用しています。
+					ランタイムサイズが標準よりも大きくなりますが、動作の効率が上がる場合があります。
+				</p>
 			</dd>
 		</dl>
 
@@ -785,60 +813,6 @@
 			詳しくは、<a href="plugin.htm">拡張プラグイン・モジュール一覧</a>を参照してください。
 		</p>
 
-		<h3 id="EX_RUNTIME">拡張ランタイム</h3>
-		<p>
-			「HSP拡張ランタイム」は、「HSP拡張プラグイン」の機能をDLLファイルなしで実行できるようにするための
-			システムです。簡単に言えば、拡張プラグインを使用したプログラムであっても、
-			EXEファイルと一緒にDLLファイルを同梱する必要がなくなります。 
-			ただし、どんなDLLでも可能なわけではありません。仕様にもとづいて作られた
-			「HSP拡張ランタイムモジュール(HRTファイル)」がサポートするDLLのみ、
-			実現が可能です。
-			拡張ランタイムは、プリプロセッサ命令「#runtime」によって、スクリプト中で指定します。
-			指定されたランタイムは、スクリプト実行時及び、実行ファイル作成時に反映されます。
-		</p>
-		<p> 
-			「HSP拡張ランタイム」により、HSPで作られたプログラムを
-			実行ファイルに変換する際の選択に、幅が広がります。
-			たとえば、COM機能を使用していないプログラムで実行ファイルを
-			作成する場合、「コンパクト版HSPランタイム」を使ってEXEファイルを作成すれば、
-			通常よりもサイズが小さく抑えられます。 
-			公開するEXEファイルのサイズが少しでも小さい方がいい人にもお勧めします。
-		</p>
-		<p>
-			HSPフルセットには以下の拡張ランタイムが同梱されています。
-			使用する際の参考にしてください。
-		</p>
-		<dl>
-			<dt>hsp3c.hrt</dt>
-			<dd>
-				<p>
-					コンパクト版HSPランタイムです。
-					標準のHSP3から、COM関連機能、及びgrect、grotate、gsquare命令が削除されています。
-					これらの機能が必要がない場合に実行ファイルをコンパクトにすることができます。
-				</p>
-			</dd>
-			<dt>hsp3cl.hrt</dt>
-			<dd>
-				<p>
-					コンソール版HSP(HSPCL)ランタイムです。
-					コンソールアプリケーション専用の実行ファイルを作成する際に使用します。
-				</p>
-			</dd>
-			<dt>hsp3hg.hrt</dt>
-			<dd>
-				<p>
-					HGIMG3の機能を内包したランタイムです。
-					HGIMG3ランタイムで作成したアプリケーションの実行ファイルを作成する際に使用します。
-				</p>
-			</dd>
-			<dt>hsp3mt.hrt</dt>
-			<dd>
-				<p>
-					マルチスレッド版HSP3の機能を内包したランタイムです。
-					マルチスレッド版で作成したアプリケーションの実行ファイルを作成する際に使用します。
-				</p>
-			</dd>
-		</dl>
 
 		<h3 id="DEBUG_WINDOW">デバッグウィンドウ</h3>
 		<img src="img/hsp_dbgw.gif" alt="デバッグウィンドウスクリーンショット" width="380" height="480" style="float:right;">
