--- a/package/win32/hsp3dish.htm
+++ b/package/win32/hsp3dish.htm
@@ -14,14 +14,19 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : HSP3Dish / onion software 2012(c)</p>
+		<p id="COPY">HSP : HSP3Dish / onion software 2014(c)</p>
 		<img src="doclib/hsp3dish.jpg" width="640" height="200" alt="タイトル">
 		<h1>HSP3Dishマニュアルインデックス</h1>
 		
 		<!-- 本文 -->
 		<ul>
 			<li><a href="doclib/hsp3dish_prog.htm">プログラミングマニュアル・基本仕様ガイド（hsp3dish_prog.htm）</a></li>
+			<li><a href="doclib/hsp3dish_js.htm">WebGL/JavaScript版(hsp3dish.js)プログラミングガイド（hsp3dish_js.htm）</a></li>
+			<br>
 			<li><a href="doclib/hsp3dish_ios.htm">iOS版プログラミングガイド（hsp3dish_ios.htm）</a></li>
+			<ul>
+				<li><a href="doclib/hsp3dish_xcode5.htm">XCode5設定ガイド（hsp3dish_xcode5.htm）</a></li>
+			</ul>
 			<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)版プログラミングガイド（hsp3dish_ndk.htm）</a></li>
 			<ul>
 				<li><a href="doclib/hsp3dish_eclipse.htm">eclipse設定ガイド（hsp3dish_eclipse.htm）</a></li>
