--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -34,14 +34,22 @@
 			<li><a href="doclib/hsptv_res.htm">HSPTVフォルダ素材一覧（hsptv_res.htm）</a></li>
 			<li><a href="doclib/tamane.txt">HSP3オフィシャル3D素材 "珠音（たまね）"（tamane.txt）</a></li>
 	    	        <li><a href="hsp3dish.htm">HSP3Dish</a>
-				<ul>
+			<ul>
 				<li><a href="doclib/hsp3dish_prog.htm">プログラミングマニュアル・基本仕様ガイド（hsp3dish_prog.htm）</a></li>
-					<ul>
-						<li><a href="doclib/support_cmds.txt">HSP3Dishコマンドリスト（support_cmds.txt）</a></li>
-					</ul>
+				<li><a href="doclib/hsp3dish_js.htm">WebGL/JavaScript版(hsp3dish.js)プログラミングガイド（hsp3dish_js.htm）</a></li>
+				<br>
 				<li><a href="doclib/hsp3dish_ios.htm">iOS版プログラミングガイド（hsp3dish_ios.htm）</a></li>
-				<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)版プログラミングガイド（hsp3dish_ndk.htm）</a></li>
+				<ul>
+					<li><a href="doclib/hsp3dish_xcode5.htm">XCode5設定ガイド（hsp3dish_xcode5.htm）</a></li>
 				</ul>
+				<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)版プログラミングガイド（hsp3dish_ndk.htm）</a></li>
+				<ul>
+					<li><a href="doclib/hsp3dish_eclipse.htm">eclipse設定ガイド（hsp3dish_eclipse.htm）</a></li>
+				</ul>
+				<li><a href="doclib/hsp3cnv.txt">HSP3ソースコンバーター・マニュアル（hsp3cnv.txt）</a></li>
+			</ul>
+
+
 			</li>
 
     	    <li><a href="doclib/plugin.htm">拡張プラグイン・モジュール</a>
