ドキュメントの更新
Former-commit-id: fe9c23d147686112cece1eb1ef385784978f87bc

--- a/package/win32/doclib/hsp3dish_js.htm
+++ b/package/win32/doclib/hsp3dish_js.htm
@@ -26,6 +26,7 @@
 		<li><a href="#BROWSE">ブラウザ上での実行</a></li>
 		<li><a href="#SCRSIZE">表示サイズのスケーリング</a></li>
 		<li><a href="#NOTICE">制限事項・既知の問題点</a></li>
+		<li><a href="#FUTURE">今後の予定</a></li>
 		<li><a href="#LICENSE">ライセンス・謝辞</a></li>
 	</ol>
 
@@ -187,8 +188,23 @@
 	</pre></ul>
 	<p>
 	その他、WEBブラウザ上で動作していることから、異なる動作、表示が行われる可能性があります。
-	今後のバージョンで、より高い互換性と機能の向上を目指していきたいと考えています。
+	現在は、データファイルをまとめて読み込んでいるため、大規模なアプリケーション(画像を大量に使用するなど)は、
+	重くなったり、処理ができないことがありますので注意ください。
 	</p>
+
+
+	<h2 id="FUTURE">今後の予定</h2>
+	<p>
+	hsp3dish.jsは、WEB上で手軽にHSPの実行を行なう環境として、今後も機能を拡充していく予定です。
+	以下は、今後のバージョンアップで検討している機能です。
+	将来のバージョンでは、より高い互換性と機能の向上を目指していきたいと考えています。
+	</p>
+	<ul><pre>
+		・HSP3Dishがサポートする命令の実装
+		・ネットワークを経由したデータファイルの取得
+		・SoupSeedとの連携機能
+		・WEB上でのコード編集及びコンパイル実行
+	</pre></ul>
 
 
 	<h2 id="LICENSE">ライセンス・謝辞</h2>
@@ -237,6 +253,9 @@
 
 		Emscripten版HSP3Dish WiKi
 		<a href="http://dev.onionsoft.net/trac/wiki/DirTrunk/Hsp3dish/Emscripten" target="_blank">http://dev.onionsoft.net/trac/wiki/DirTrunk/Hsp3dish/Emscripten</a>
+
+		peppermint
+		<a href="http://peppermint.jp/" target="_blank">http://peppermint.jp/</a>
 	</pre></ul>
 
 	<!-- フッター -->
