--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -14,16 +14,17 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.32 / onion software 1997-2013(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.4 / onion software 1997-2014(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
-		<h1>HSP3.32 アップデートガイド</h1>
+		<h1>HSP3.4 アップデートガイド</h1>
 
 		<!-- 目次 -->
 		<ol>
 			<li><a href="#INTRO">イントロダクション</a></li>
-			<li><a href="#DIFF32">HSP3.32の変更点について</a></li>
-			<li><a href="#HSPDISH">新規ランタイム、HSP3Dishについて</a></li>
-			<li><a href="#HSP332UPDATE">HSP3.32のアップデートについて</a></li>
+			<li><a href="#DIFF34">HSP3.4の変更点について</a></li>
+			<li><a href="#HSED">標準スクリプトエディタの更新について</a></li>
+			<li><a href="#HSPDISH">HSP3Dishについて</a></li>
+			<li><a href="#HSP34UPDATE">HSP3.4のアップデートについて</a></li>
 			<li><a href="#DIFF2">HSP2との違いについて</a></li>
 			<li><a href="#SUMMARY">HSP3の概要</a>
 				<ol>
@@ -60,56 +61,63 @@
 		<!-- 本文 -->
 		<h2 id="INTRO">イントロダクション</h2>
 		<p>
-			HSP3.32は、HSP3.3及びHSP3.31に替わる新しいバージョンです。
+			HSP3.4は、HSP3.3及びHSP3.32に替わる新しいバージョンです。
 			大幅な仕様の変更はなく、あくまでも上位互換として動作する形で、各種機能が追加されています。
 		</p>
 		<p>
-			ここでは、HSP3.32とHSP3.2、HSP3.3の違いについて。
+			ここでは、HSP3.4とHSP3.3の違いについて。
 			そして、HSP2.61とHSP3全般の違いについて解説していきます。
 		</p>
 
 
-		<h2 id="DIFF32">HSP3.32の変更点について</h2>
+		<h2 id="DIFF34">HSP3.4の変更点について</h2>
 		<p>
-			HSP3.32は、HSP3.3のマイナーアップデートバージョンです。
-			HSP3.3をすでに使っているユーザーは、特に意識することなくHSP3.32をお使いいただけるはずです。
+			HSP3.4は、HSP3.3からのメジャーアップデートバージョンです。
+			HSP3.3をすでに使っているユーザーは、特に意識することなくHSP3.4をお使いいただけるはずです。
 		</p>
 		<p>
 			HSP3の詳細な更新履歴については、<a href="history.txt">こちら(history.txt)</a>を参照してください。
 		</p>
 		<p>
-			HSP3.32でHSP3.2から追加変更された主要な項目は以下の通りです。
+			HSP3.4でHSP3.32から追加変更された主要な項目は以下の通りです。
 		</p>
+		<UL>
+		<LI>HSP3Dishで作成したスクリプトをWEBブラウザ上で実行するhsp3dish.jsを同梱しています
+		<LI>iOS/androidでの実行をサポートするHSP3Dishの各種機能を拡充しています
+		<LI>HSP3Dish Helperツールも、より便利で手軽に利用できようになりました
+		<LI>イージング制御のための、setease命令、getease、geteasef関数を追加しています
+		<LI>画像をプリンタで印刷するための新規プラグインhspprintを追加しています
+		<LI>スクリプト中の全角スペースをスペース・タブと同様に無視するように修正されています
+		<LI>ハイレベルな3D表現を可能にするHGIMG4プラグインを同梱しています
+		<LI>オブジェクトファイルの出力データを調整しています
+		<LI>hspcmpプラグインのhsc_comp命令にUTF8出力オプションを追加しています
+		<LI>hspsockプラグインでサーバーが同一ポートを共有できるように修正されています
+		<LI>HSP3オフィシャル3D素材 "珠音（たまね）"をhgimg3/hgimg4フォルダに同梱しています
+		<LI>HGIMG3にある不具合のいくつかを修正しました
+		</UL>
 		<p>
+			HSP3.3から追加変更された主要な項目は以下の通りです。
+		</p>
 		<UL>
 		<LI>自由に使用できる標準の素材がhsptvフォルダに追加されています
 		<LI>文字列の置換を行なう新規命令、strrepを追加しています
 		<LI>await命令による待ち時間の精度が向上しています
 		<LI>標準でPNG、TGA、PSDフォーマットの読み込みに対応しています
-		<LI>スマートフォン(iOS、android)に対応したHSP3Dishランタイムを同梱しています
 		<LI>HSP3Dish Helperを同梱し、androidデバイスへの変換をサポートします
 		<LI>HSPソースコンバーターによりCソースコードへの変換が可能です
 		<LI>HSPスクリプトエディタのエンジン(Footy2)を更新し、表示や操作面の改善を行ないました
-		<LI>未初期化の変数が使用されたことを検出する機能を追加しています
-		<LI>スクリプト実行速度を10～20%程度改善しています
-		<LI>HGIMG3にある不具合のいくつかを修正しました
-		<LI>powf関数がマクロから標準の実装に切り替えられ、より正確な値を返します
 		<LI>USB機器のコントロールに関するプラグイン、モジュールを同梱しています
 		<LI>セキュリティ対策のためDPM暗号化のアルゴリズムを調整しています
 		</UL>
-		</p>
 		<p>
 			バージョンアップにあたり互換性の影響が出る可能性は、以下があります。これ以外で、問題が出ることは想定していません。
 		</p>
 
 
-		<dl>
-			<dt>
-			標準スクリプトエディタの更新
-			</dt><br>
-			<dd>
-				<p>
-	エディタのエンジンとして使用しているFooty2ライブラリを新しいバージョンに更新しています。
+		<h2 id="HSED">標準スクリプトエディタの更新について</h2>
+
+<p>
+	HSP3.32から、エディタのエンジンとして使用しているFooty2ライブラリを新しいバージョンに更新しています。
 	これにより、以前のエンジン(Footy1)による不具合や制限が解消されます。
 	エディタの操作自体は基本的に以前と変わっていませんが、以下の点についてご注意下さい。
 <br>
@@ -143,80 +151,8 @@
 	HSP3.21まで使用していたFooty1版のエディタを使用したい方は、HSPインストールディレクトリにあるhsed3f1.exeをお使い頂くことができます。<br>
 	その場合は、hsed3f1.exeをリネームするか、関連付け先を変更してご使用ください。
 			</p>
-			</dd>
-			<dt>
-			powfの標準数学関数置き換えについて
-			</dt><br>
-			<dd>
-				<p>
-				いままでマクロとして実装されていたpowf関数を標準の数学関数として置き換えました。
-				これにより、使用方法そのものが変更されることはありませんが
-				過去のバージョンと演算結果が異なる場合があるので注意してください。従来は、近似値を求めていたため、
-				<pre>
-				mes 0+powf(2,3)
-				</pre>
-				の結果で7(7.99999…)が返されていました。これにより想定と違った
-				結果が起こる場合がありましたが、新しいバージョンでは、8(8.0)が返されます。
-				また、hspmath.asのpowマクロも、powfを使用するよう変更されています。
 
-				新しいpowf関数は、commonフォルダのhspdef.as及び、HSP3の必須ファイル
-				hspcmp.dll、hsp3.exe等のランタイムが正しく更新されていない場合、
-				正常に動作しなかったりエラーが発生することがあります。
-				アップデートの際は、必ずcommonフォルダも含めて最新版であることを
-				確認するようにしてください。
-				</p>
-			</dd>
-			<dt>
-			中間コードの最適化について
-			</dt><br>
-			<dd>
-				<p>
-	中間コードに最適化のためのフラグを新規に埋め込んでいます。
-	これにより、パラメーター解析などで実行時にかかる処理を軽減することができ、高速化につながります。<br>
-	HSP3.3に関わるファイルをすべて正しくアップデートされていれば、特に問題はありません。
-	あまりないケースだと思いますが、HSP3.3で作成した
-	axファイル(オブジェクトファイル)を、それ以前のバージョンのHSPで
-	動作させようとした場合に問題が発生します。<br>
-	HSP3.3自体は、従来のコードに対して上位互換で動作しますが、
-	HSP3.3で生成された中間コード(axファイル、オブジェクトファイル)は、
-	HSP3.3より古いバージョン(HSP3.21、HSP3.22を含む)では正常に動作しませんので注意してください。
-<br>
-<pre>
-	HSP3.2で生成したaxファイル　→　HSP3.2○　HSP3.3○ [上位互換あり]
-	HSP3.3で生成したaxファイル　→　HSP3.2×　HSP3.3○ [下位互換なし]
-</pre>
-	中間コードの最適化機能を操作する場合は、プリプロセッサ命令#cmpoptを使用します。
-<br>
-<pre>
-		#cmpopt optprm 1	; パラメーター最適化ON
-</pre>
-	または、
-<pre>
-		#cmpopt optprm 0	; パラメーター最適化OFF
-</pre>
-	をソースに記述することで、明示的に最適化機能を選択することができます。
-<br>
-	また、ブラウザ上でHSPのコードを動作させる<b>HSPLetは、中間コードの最適化に対応していません</b>。
-	HSPLetを使用する場合には、必ず「#cmpopt optprm 0」をソースコードに指定して、パラメーター最適化を無効にしてください。
-				</p>
-			</dd>
-			<dt>
-			DPM暗号化の更新について
-			</dt><br>
-			<dd>
-				<p>
-				セキュリティ対策のためDPM暗号化のアルゴリズムを一部調整しています。
-				これにより、HSP3.3より古いバージョン(HSP3.21、HSP3.22を含む)で作成された<b>暗号化付きDPMファイルの読み取りができません</b>。
-<br>
-				HSP3.3で読み込み可能なDPMファイルは、HSP3.3以降のバージョンで作成する必要がありますのでご注意ください。
-				また、exeファイル内にパックされるstart.axや、暗号化済みデータも以前のバージョンとは異なる形式で格納されます。
-<br>
-				尚、HSP3.3では、スクリプトエディタで、「指定フォルダからDPM作成」メニューにより、DPMファイルの生成を行なうツールの呼び出しが可能になっています。
-				</p>
-			</dd>
-		</dl>
-
-		<h2 id="HSPDISH">新規ランタイム、HSP3Dishについて</h2>
+		<h2 id="HSPDISH">HSP3Dishについて</h2>
 		<p>
 		HSP3Dishは、HSP3の動作環境を様々なデバイス上で構築するための
 		追加セットです。Windows上で開発したスクリプトを、別なOS上で
@@ -239,20 +175,19 @@
 		HSP3Dishの詳細と使用方法については、<a href="hsp3dish_prog.htm">マニュアル(hsp3dish_prog.htm)</a>を参照してください。
 		</p>
 
-		<h2 id="HSP332UPDATE">HSP3.32のアップデートについて</h2>
+		<h2 id="HSP34UPDATE">HSP3.4のアップデートについて</h2>
 		<p>
-		HSP3.32は、HSP3.3からのマイナーアップデートになります。
-		特に変更を意識することなく、HSP3.3と同様にお使い頂けます。
-		HSP3.32で変更された項目の詳細は、以下の通りです。
+		HSP3.4は、特に変更を意識することなく、HSP3.3やHSP3.32と同様にお使い頂けます。
+		HSP3.4で変更された項目の詳細は、以下の通りです。
 		</p>
 
 		<dl>
 			<dt>
-			Windows8の対応について
+			Windows8.1の対応について
 			</dt><br>
 			<dd>
 			<p>
-			HSP3.32では、Windows8上での動作を確認しています。
+			HSP3.4では、Windows8及びWindows8.1上での動作を確認しています。
 			HSP3.31までのバージョンでは、Windows8(x64)上でウインドウを閉じる(終了する)際にランタイムエラーが表示されることがありました。
 			これは、動作自体に影響はなく、システム上で問題が起こるものではありませんが、Windows8上での動作を安定させるためにも最新版でのご使用を推奨します。
 			</p>
@@ -357,21 +292,6 @@
 			素材データの一覧については、<a href="hsptv_res.htm">HSPTVフォルダ素材一覧(hsptv_res.htm)</a>を参照してください。
 			</p>
 			</dd>
-
-			<dt>
-			Easy3Dプラグイン同梱終了について
-			</dt><br>
-			<dd>
-			<p>
-			HSP3.31までフルセットに同梱されていたEasy3Dプラグインについて、作者であるおちゃっこさんのサポート終了と方針変更に伴い、同梱を終了致しました。<br>
-			フルセットでの配布は終了となりますが、引き続きHSP上でプラグインを動作させることは可能で、配布や利用についての規約は変わりなくお使い頂けます。
-			Easy3Dを使用して作品を発表している方や、現在作品を製作中の方がライセンス上で影響を受けることはありません。
-			</p>
-			<p>
-			詳しくは、<a href="http://www.onionsoft.net/wp/archives/857" target="_blank">Easy3Dプラグインについてのアナウンス</a>を参照してください。
-			</p>
-			</dd>
-
 		</dl>
 
 		<h2 id="DIFF2">HSP2との違いについて</h2>
