HSP3.4ドキュメント更新
Former-commit-id: 69da5ab32898bdd01e5c73c98a34e651e889448b

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -78,10 +78,10 @@
 		<h2 id="DOUSA_ENV">動作環境</h2>
 		<ul>
 			<li>Microsoft Windows 98 / Me</li>
-			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7、8</li>
+			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7、8、8.1</li>
 		</ul>
 		<p>
-			HSP3.32は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
+			HSP3.4は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
 		</p>
 		<pre>
 	Windows 98及びMe上では、標準の「HSPスクリプトエディタ」は動作致しません。
@@ -89,7 +89,7 @@
 	また、InternetExplorer4.0以降がインストールされているWindows 95上でも動作可能ですが、保証外となります。
 		</pre>
 		<p>
-			Windows 7、8及びVistaの64bit(x64)版での動作を確認しています。
+			Windows 7、8、8.1及びVistaの64bit(x64)版での動作を確認しています。
 		</p>
 		<p>
 			640×480以上の解像度と、256色以上の表示が可能なディスプレイが必要
@@ -102,7 +102,7 @@
 
 		<h2 id="PACKAGE">パッケージ構成</h2>
 		<p>
-			HSP3.32フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
+			HSP3.4フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
 			Windows上で手軽にプログラミングを楽しむことができるよう構成されています。
 			スクリプトを記述するための「HSPスクリプトエディタ」を始めとして、
 			視覚的にプログラムの動作を確認することができるツール「Peas」、
@@ -112,19 +112,19 @@
 
 		<h2 id="INSTALL">インストール</h2>
 		<p>
-			HSP3.32フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
-			インストーラーを起動するか、または任意のディレクトリにhsp332フォルダを解凍する
-			ことで使用できるようになります。(推奨ディレクトリは、「c:\hsp332」です)
+			HSP3.4フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
+			インストーラーを起動するか、または任意のディレクトリにhsp34フォルダを解凍する
+			ことで使用できるようになります。(推奨ディレクトリは、「c:\hsp34」です)
 		</p>
 		<p>
-			HSP3.32以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
+			HSP3.4以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
 			してから、新しいバージョンをインストールすることを推奨します。
-			ただし、HSP3.32のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
+			ただし、HSP3.4のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
 			以前のバージョンと競合することはありません。(過去のバージョンと同時に利用することも可能です。)
 		</p>
 		<p>
-			Windows 2000以降(XP、Vista、7、8等)では、HSP3.32のインストールフォルダに書き込み権限が必要になります。
-			インストーラーのデフォルトディレクトリ(/HSP332)にインストールを行なった場合なども、
+			Windows 2000以降(XP、Vista、7、8、8.1等)では、HSP3.4のインストールフォルダに書き込み権限が必要になります。
+			インストーラーのデフォルトディレクトリ(/HSP34)にインストールを行なった場合なども、
 			管理者権限を持ったユーザーで実行するようにしてください。
 		</p>
 		<p>
@@ -157,7 +157,7 @@
 
 		<h2 id="DEMO">デモンストレーション</h2>
 		<p>
-			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「サンプルデモ」
+			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「サンプルデモ」
 			を起動させてみてください。HSPのサンプルデモが始まります。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HSP3DEMO.EXEを起動させてみてください。）
 		</p>
@@ -166,16 +166,16 @@
 			色々なデモンストレーションを見ることができます。
 		</p>
 		<p>
-			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「HSPアシスタント」
+			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「HSPアシスタント」
 			を選択することで。HSPサンプルスクリプトを閲覧するための「HSPアシスタント」が起動します。
 			「HSPアシスタント」で、「Sample」のボタンを押してからファイルを選択するだけで、
 			すぐに実行・閲覧することができます。
 		</p>
 
-		<h2 id="CHANGE31">HSP3.2からの変更点</h2>
+		<h2 id="CHANGE31">HSP3.3からの変更点</h2>
 		<p>
-			HSP3.32では、上位互換となる形で機能の修正と追加を行なっています。
-			HSP3.2で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.32で動作させることができます。
+			HSP3.4では、上位互換となる形で機能の修正と追加を行なっています。
+			HSP3.3(HSP3.32を含む)で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.4で動作させることができます。
 			詳しくは、<a href="update.htm">アップデートガイド</a>を参照してください。
 		</p>
 
@@ -211,7 +211,7 @@
 			HSPアシスタントにより、命令の検索、サンプルスクリプトの参照、ネットワーク素材取得などを行なうことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「HSPアシスタント」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「HSPアシスタント」
 			を選択することで、HSPアシスタントが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPAT.EXEを起動させてみてください。)
 		</p>
@@ -226,7 +226,7 @@
 			ダウンロードして楽しむことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「HSPTVブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「HSPTVブラウザ」
 			を選択することで、HSPTVブラウザが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPTV.EXEを起動させてみてください。)
 		</p>
@@ -245,7 +245,7 @@
 			スクリプトを自動的に生成することができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「Peasエディタ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「Peasエディタ」
 			を選択することで、Peasエディタが起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、AHTMAN.EXEを起動させてみてください。）
 		</p>
@@ -262,7 +262,7 @@
 			統合的な検索とシームレスなリンクが行なわれ、スクリプトの開発効率を高めます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「ドキュメントブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.4」→「ドキュメントブラウザ」
 			を選択することで起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HDL.EXEを起動させてください。）
 		</p>
@@ -279,13 +279,11 @@
 		</p>
 		<dl>
 			<dt>HSPTV（HSPに関する情報、ユーザー支援など）</dt>
-			<dd><p><a href="http://hsp.tv/">http://hsp.tv/</a></p></dd>
+			<dd><p><a href="http://hsp.tv/" target="_blank">http://hsp.tv/</a></p></dd>
 			<dt>HSP関連書籍ページ（書店で入手できる参考書の紹介）</dt>
-			<dd><p><a href="http://hsp.tv/make/hspbook.html">http://hsp.tv/make/hspbook.html</a></p></dd>
+			<dd><p><a href="http://hsp.tv/make/hspbook.html" target="_blank">http://hsp.tv/make/hspbook.html</a></p></dd>
 			<dt>ONION software（HSP開発元）</dt>
-			<dd><p><a href="http://www.onionsoft.net/">http://www.onionsoft.net/</a></p></dd>
-			<dt>HSPBT（HSPに関するバグトラック、要望事項の蓄積）</dt>
-			<dd><p><a href="http://quasiquote.org/hspbt/guest">http://quasiquote.org/hspbt/guest</a></p></dd>
+			<dd><p><a href="http://www.onionsoft.net/" target="_blank">http://www.onionsoft.net/</a></p></dd>
 		</dl>
 		<p>
 			HSPについてのご意見、不具合の情報、要望などいつでもお待ちしています。
@@ -310,23 +308,15 @@
 		<dl>
 			<dt>HSPセンター（初心者向けの各種情報、講座など）</dt>
 			<dd>
-				<p><a href="http://hspcenter.com">http://hspcenter.com</a></p>
+				<p><a href="http://hspcenter.com" target="_blank">http://hspcenter.com</a></p>
 			</dd>
-			<dt>HSP Users Group（有志のユーザーによる活動）</dt>
+			<dt>hsp-devメーリングリスト（HSP周辺ツール開発協力者のためのメーリングリスト）</dt>
 			<dd>
-				<p><a href="http://garde.esprix.net/hsp-users/">http://garde.esprix.net/hsp-users/</a></p>
-			</dd>
-			<dt>HSPメーリングリスト（HSPについてのメーリングリスト案内）</dt>
-			<dd>
-				<p><a href="http://garde.esprix.net/hsp-ml/">http://garde.esprix.net/hsp-ml/</a></p>
+				<p><a href="http://chatblanc.net/hsp-users/hsp-dev/" target="_blank">http://chatblanc.net/hsp-users/hsp-dev/</a></p>
 			</dd>
 			<dt>HSPWiKi（誰でも書き込めるHSPに関するWiKi）</dt>
 			<dd>
-				<p><a href="http://quasiquote.org/hspwiki/">http://quasiquote.org/hspwiki/</a></p>
-			</dd>
-			<dt>HSP開発wiki（誰でも書き込めるHSPに関するWiKi）</dt>
-			<dd>
-				<p><a href="http://hspdev-wiki.net/">http://hspdev-wiki.net/</a></p>
+				<p><a href="http://quasiquote.org/hspwiki/" target="_blank">http://quasiquote.org/hspwiki/</a></p>
 			</dd>
 		</dl>
 
@@ -361,7 +351,7 @@
 
 		<h2 id="COPYRIGHT">著作権、ライセンスについて</h2>
 		<p>
-			HSP3.32フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
+			HSP3.4フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
 			HSP開発システムは、開発の中心となる要素で以下の項目を指します。
 		</p>
 		<ul>
@@ -369,6 +359,7 @@
 			<li>デバッグ実行ランタイム(hsp3.exe、hsp3cl.exe、hsp3debug.dll)</li>
 			<li>HSP拡張ランタイム(hsprt、hsp3c.hrt、hsp3cl.hrt)</li>
 			<li>HSPコードコンパイラ(hspcmp.dll)</li>
+			<li>HSP3Dishシステム(hsp3dish.exe、hsp3dh.exe、hsp3cnv.exe)</li>
 			<li>HSPTVブラウザ(hsptv.exe)</li>
 			<li>Peasエディタ(ahtman.exe)</li>
 		</ul>
@@ -466,13 +457,13 @@ i>
 			<dt>OpenHSP Development</dt>
 			<dd>
 				<p>
-					<a href="http://www.onionsoft.net/hsp/openhsp/">http://www.onionsoft.net/hsp/openhsp/</a>
+					<a href="http://www.onionsoft.net/hsp/openhsp/" target="_blank">http://www.onionsoft.net/hsp/openhsp/</a>
 				</p>
 			</dd>
 			<dt>OpenHSPプロジェクト・ポータル</dt>
 			<dd>
 				<p>
-					<a href="http://dev.onionsoft.net/trac/wiki">http://dev.onionsoft.net/trac/wiki</a>
+					<a href="http://dev.onionsoft.net/trac/wiki" target="_blank">http://dev.onionsoft.net/trac/wiki</a>
 				</p>
 			</dd>
 		</dl>
@@ -504,13 +495,13 @@ i>
 			<dt>HSP学校関係者向け情報ページ</dt>
 			<dd>
 				<p>
-					<a href="http://www.onionsoft.net/hsp/education/index.html">http://www.onionsoft.net/hsp/education/index.html</a>
+					<a href="http://www.onionsoft.net/hsp/education/index.html" target="_blank">http://www.onionsoft.net/hsp/education/index.html</a>
 				</p>
 			</dd>
 			<dt>HSP school center（学校関係者用ページ）</dt>
 			<dd>
 				<p>
-					<a href="http://www.hspcenter.com/school/index.html">http://www.hspcenter.com/school/index.html</a>
+					<a href="http://www.hspcenter.com/school/index.html" target="_blank">http://www.hspcenter.com/school/index.html</a>
 				</p>
 			</dd>
 		</dl>
@@ -559,6 +550,9 @@ i>
 		</p>
 		<p>
 			HSP Document Library及び、d3module,Artlet2D,SQLeleはS.Programsさんが製作されたものを同梱させていただきました。
+		</p>
+		<p>
+			hsp3dish.jsは、zakkiさんが製作されたものを同梱させていただきました。
 		</p>
 		<p>
 			HSPLetは、山田 雄己(Yuki)さんが製作されたものを同梱させていただきました。
@@ -615,67 +609,73 @@ i>
 			<dt>ちょくと さん</dt>
 			<dd>
 				<p>
-		<a href="http://chokuto.ifdef.jp/">http://chokuto.ifdef.jp/</a>
+		<a href="http://chokuto.ifdef.jp/" target="_blank">http://chokuto.ifdef.jp/</a>
 				</p>
 			</dd>
 			<dt>S.Programs NET (S.Programsさん)</dt>
 			<dd>
 				<p>
-		<a href="http://sprocket.babyblue.jp/">http://sprocket.babyblue.jp/</a>
+		<a href="http://sprocket.babyblue.jp/" target="_blank">http://sprocket.babyblue.jp/</a>
 				</p>
 			</dd>
 			<dt>悠黒 喧史 さん</dt>
 			<dd>
 				<p>
-		<a href="http://www.geocities.jp/tko_soft/">http://www.geocities.jp/tko_soft/</a>
+		<a href="http://www.geocities.jp/tko_soft/" target="_blank">http://www.geocities.jp/tko_soft/</a>
 				</p>
 			</dd>
 			<dt>HSP-NEXT (さくら さん)</dt>
 			<dd>
 				<p>
-		<a href="http://hspnext.com/">http://hspnext.com/</a>
+		<a href="http://hspnext.com/" target="_blank">http://hspnext.com/</a>
 				</p>
 			</dd>
 			<dt>ぷまさん</dt>
 			<dd>
 				<p>
-		<a href="http://dream.freespace.jp/puma/">http://dream.freespace.jp/puma/</a>
+		<a href="http://dream.freespace.jp/puma/" target="_blank">http://dream.freespace.jp/puma/</a>
 				</p>
 			</dd>
 			<dt>HyperPageProjectさん</dt>
 			<dd>
 				<p>
-		<a href="http://www.hpp.be/">http://www.hpp.be/</a>
+		<a href="http://www.hpp.be/" target="_blank">http://www.hpp.be/</a>
 				</p>
 			</dd>
 			<dt>山田 雄己(Yuki)さん</dt>
 			<dd>
 				<p>
-		<a href="http://www.group-finity.com/">http://www.group-finity.com/</a>
+		<a href="http://www.group-finity.com/" target="_blank">http://www.group-finity.com/</a>
 				</p>
 			</dd>
 			<dt>fujidigさん</dt>
 			<dd>
 				<p>
-		<a href="http://www.fujidig.com/">http://www.fujidig.com/</a>
+		<a href="http://fujidig.hatenablog.com/" target="_blank">http://fujidig.hatenablog.com/</a>
 				</p>
 			</dd>
 			<dt>Shark++さん</dt>
 			<dd>
 				<p>
-		<a href="http://www.sharkpp.net/">http://www.sharkpp.net/</a>
+		<a href="http://www.sharkpp.net/" target="_blank">http://www.sharkpp.net/</a>
 				</p>
 			</dd>
 			<dt>K-Kさん</dt>
 			<dd>
 				<p>
-		<a href="http://www.binzume.net/">http://www.binzume.net/</a>
+		<a href="http://www.binzume.net/" target="_blank">http://www.binzume.net/</a>
 				</p>
 			</dd>
 			<dt>Crystal light stage (arueさん)</dt>
 			<dd>
 				<p>
-		<a href="http://hp.vector.co.jp/authors/VA029904/">http://hp.vector.co.jp/authors/VA029904/</a>
+		<a href="http://hp.vector.co.jp/authors/VA029904/" target="_blank">http://hp.vector.co.jp/authors/VA029904/</a>
+				</p>
+			</dd>
+			<dt>zakkiさん</dt>
+			<dd>
+				<p>
+		<a href="http://peppermint.jp/" target="_blank">http://peppermint.jp/</a>
 				</p>
 			</dd>
 		</dl>
