--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,更新情報,アップデート">
 	<meta name="description" content="HSPの更新情報を掲載">
 	<link href="../main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSP3.32 アップデートガイド</title>
+	<title>HSP3.4 アップデートガイド</title>
 </head>
 <body>
 	<div id="CONTAINER">
@@ -21,10 +21,10 @@
 		<!-- 目次 -->
 		<ol>
 			<li><a href="#INTRO">イントロダクション</a></li>
+			<li><a href="#HSP34UPDATE">HSP3.4のアップデート概要</a></li>
 			<li><a href="#DIFF34">HSP3.4の変更点について</a></li>
 			<li><a href="#HSED">標準スクリプトエディタの更新について</a></li>
 			<li><a href="#HSPDISH">HSP3Dishについて</a></li>
-			<li><a href="#HSP34UPDATE">HSP3.4のアップデートについて</a></li>
 			<li><a href="#DIFF2">HSP2との違いについて</a></li>
 			<li><a href="#SUMMARY">HSP3の概要</a>
 				<ol>
@@ -68,6 +68,69 @@
 			ここでは、HSP3.4とHSP3.3の違いについて。
 			そして、HSP2.61とHSP3全般の違いについて解説していきます。
 		</p>
+
+
+	<h2 id="HSP34UPDATE">HSP3.4のアップデート概要</h2>
+		<p>
+		HSP3.4は、特に変更を意識することなく、HSP3.3やHSP3.32と同様にお使い頂けます。
+		HSP3.4で変更された項目の概要は、以下の通りです。
+		</p>
+
+		<dl>
+
+			<dt>
+			HSP3Dishの機能拡充
+			</dt><br>
+			<dd>
+			<p>
+			iOS/androidでの実行をサポートする<a href="http://hsp.tv/make/hsp3dish.html" target="_blank">HSP3Dish</a>の各種機能を拡充しています。
+			また、新たにHSP3Dishで作成したスクリプトをWEBブラウザ上で実行するためのシステム、hsp3dish.jsを同梱しています。
+			幅広いデバイスへの変換をサポートするHSP3Dish Helperツールも、より便利で手軽に利用できようになりました。
+			</p>
+			</dd>
+
+			<dt>
+			HGIMG4プラグインの追加
+			</dt><br>
+			<dd>
+			<p>
+			ハイレベルな3D表現を可能にする<a href="http://hsp.tv/make/hgimg4.html" target="_blank">HGIMG4プラグイン</a>を同梱しています。
+			シェーダーや物理エンジンなど最新のテクノロジーを利用したソフトウェアを、HSPから手軽に開発することができる、まったく新しいプラグインです。
+			</p>
+			</dd>
+
+			<dt>
+			標準機能の拡充
+			</dt><br>
+			<dd>
+			<p>
+			アニメーション効果などに活用できるイージング制御のための、setease命令、getease、geteasef関数を標準で追加しています。
+			さらに画像をプリンタで印刷するための新規プラグインhspprintを追加しているほか、hspsock、hspcmpといったプラグインも更新されています。
+			</p>
+			</dd>
+
+			<dt>
+			HSP3オフィシャル3D素材
+			</dt><br>
+			<dd>
+			<p>
+			hgimg3/hgimg4で利用できる、HSP3オフィシャル3D素材 "珠音（たまね）"を同梱しています。
+			各種アニメーションも用意され、フリーに使用できる素材データです。
+			</p>
+			</dd>
+
+			<dt>
+			Windows8.1の対応について
+			</dt><br>
+			<dd>
+			<p>
+			HSP3.4では、Windows8及びWindows8.1上での動作を確認しています。
+			HSP3.31までのバージョンでは、Windows8(x64)上でウインドウを閉じる(終了する)際にランタイムエラーが表示されることがありました。
+			これは、動作自体に影響はなく、システム上で問題が起こるものではありませんが、Windows8上での動作を安定させるためにも最新版でのご使用を推奨します。
+			</p>
+			</dd>
+
+		</dl>
 
 
 		<h2 id="DIFF34">HSP3.4の変更点について</h2>
@@ -114,7 +177,7 @@
 		</p>
 
 
-		<h2 id="HSED">標準スクリプトエディタの更新について</h2>
+	<h2 id="HSED">標準スクリプトエディタの更新について</h2>
 
 <p>
 	HSP3.32から、エディタのエンジンとして使用しているFooty2ライブラリを新しいバージョンに更新しています。
@@ -152,11 +215,10 @@
 	その場合は、hsed3f1.exeをリネームするか、関連付け先を変更してご使用ください。
 			</p>
 
-		<h2 id="HSPDISH">HSP3Dishについて</h2>
+	<h2 id="HSPDISH">HSP3Dishについて</h2>
 		<p>
 		HSP3Dishは、HSP3の動作環境を様々なデバイス上で構築するための
-		追加セットです。Windows上で開発したスクリプトを、別なOS上で
-		動作させるための仕組みを提供します。
+		追加セットです。Windows上で開発したスクリプトを、WEBブラウザ、iOS、androidなど別なデバイスで動作させるための仕組みを提供します。
 		</p>
 		<p>
 		HSP3.3に含まれる、HSP3Dishランタイムは、通常版のHSP3と比べて機能が制限され、
@@ -175,124 +237,6 @@
 		HSP3Dishの詳細と使用方法については、<a href="hsp3dish_prog.htm">マニュアル(hsp3dish_prog.htm)</a>を参照してください。
 		</p>
 
-		<h2 id="HSP34UPDATE">HSP3.4のアップデートについて</h2>
-		<p>
-		HSP3.4は、特に変更を意識することなく、HSP3.3やHSP3.32と同様にお使い頂けます。
-		HSP3.4で変更された項目の詳細は、以下の通りです。
-		</p>
-
-		<dl>
-			<dt>
-			Windows8.1の対応について
-			</dt><br>
-			<dd>
-			<p>
-			HSP3.4では、Windows8及びWindows8.1上での動作を確認しています。
-			HSP3.31までのバージョンでは、Windows8(x64)上でウインドウを閉じる(終了する)際にランタイムエラーが表示されることがありました。
-			これは、動作自体に影響はなく、システム上で問題が起こるものではありませんが、Windows8上での動作を安定させるためにも最新版でのご使用を推奨します。
-			</p>
-			</dd>
-
-			<dt>
-			読み込み可能画像フォーマットの追加について
-			</dt><br>
-			<dd>
-			<p>
-			標準で、PNG、TGA、PSD形式の画像を読み込むことが可能になりました。
-			(コンパクト版(hsp3c)ランタイムを除く)
-			</p>
-			<PRE>
-		PNG形式  : 拡張子 PNG : Portable Network Graphicsデータ。
-		PSD形式  : 拡張子 PSD : Photoshop形式のデータ。(合成レイヤーのみ)
-		TGA形式  : 拡張子 TGA : TARGA 形式のデータ。
-		※従来通りのBMP、GIF、JPG、ICO形式もサポートされます。</PRE>
-			<p>
-			ただし、インターレース形式のPNGファイルには標準では対応していません。PNGがサポートするすべての形式を読み込む場合は、imgloadまたはhspcvプラグインをご使用下さい。
-			</p>
-			<p>
-			PNG、TGA、PSD形式で透明色(アルファチャンネル)を含む画像を
-			picload命令で読み込む場合、画像のアルファチャンネルが適用されます。
-			picload命令のモード1(現在の画面の上にロード)で読み込んだ場合、
-			アルファチャンネルを適用した状態で合成されることになります。
-			モード0(画面を初期化してロード)の場合は、通常通り白色の背景で
-			画面を初期化した上で、読み込みを行ないます。
-			HSP3.32では、新しくモード2(黒色で画面を初期化してロード)が追加
-			されています。これは、黒色の背景で画面を初期化した上で、
-			読み込みを行ないます。これにより、透明部分が黒色になりgcopy命令等で
-			黒色を透明としてコピーする場合に有効です。
-			また、celload命令での画像読み込み時は、常にモード2と同様に
-			黒色の背景で画面を初期化して読み込みを行なう動作となっています。
-			</p>
-			</dd>
-
-			<dt>
-			await命令の精度について
-			</dt><br>
-			<dd>
-			<p>
-			HSP3.32では、await命令の待ち時間精度を向上させています。
-			これにより、従来よりも一定で高精度な時間待ちを実現できます。
-			ただし、従来のスクリプトと待ち時間のタイミングが微妙に変わる
-			可能性がありますのでご注意ください。
-			</p>
-			</dd>
-
-			<dt>
-			新規命令、strrepについて
-			</dt><br>
-			<dd>
-			<p>
-			新規の文字列操作命令として、文字列の置換を行なうstrrep命令が
-			新たに追加されています。
-			</p>
-			<PRE>
-		strrep p1,"検索文字列","置換文字列"
-
-		p1=変数名 : 検索される文字列が格納されている文字列型変数名
-		"検索文字列" : 検索する文字列
-		"置換文字列" : 置換する文字列</PRE>
-			<p>
-			p1で指定した文字列型変数の内容すべてにおいて、
-			"検索文字列"で指定した文字列を、"置換文字列"に置き換えます。
-			実行後、システム変数statに文字列を置換した回数が代入されます。
-			</p>
-			</dd>
-
-			<dt>
-			HSPTVフォルダ素材について
-			</dt><br>
-			<dd>
-			<p>
-			HSP3.32では、自由に使用できる素材として、HSPTVフォルダ素材に
-			サウンド(.wav、.mid)、画像(.jpg、.bmp、.png)を同梱しています。
-			これらの素材は、ユーザーがソフトを作成する際に自由に使用・配布
-			することができます。(著作権表記をする場合は、ドキュメントに
-			「HSP3.32付属のフリー素材データを使用」のようにお書き下さい。
-			ただし、データを使用しても著作権表記を行なう義務はありません。)
-			<br><br>
-			スクリプトから素材データを呼び出す際には、dir_tvマクロを
-			使用すると便利です。
-			</p>
-			<PRE>
-		picload dir_tv+"sozai1.jpg"</PRE>
-			<p>
-			のように記述することで、HSPTVフォルダから指定されたファイル名を
-			検索することになります。
-			素材のデータを含むexe(実行)ファイルを作成する場合は、
-			</p>
-			<PRE>
-		#pack "sozai1.jpg"</PRE>
-			<p>
-			のように#pack命令に素材のファイル名を直接指定してください。
-			(#epack命令も同様です)
-			#pack、#epack命令では、スクリプトのあるフォルダ及びHSPTVフォルダ
-			から該当するファイルを検索し、exe(実行)ファイルを作成します。
-			</p>
-			<p>
-			素材データの一覧については、<a href="hsptv_res.htm">HSPTVフォルダ素材一覧(hsptv_res.htm)</a>を参照してください。
-			</p>
-			</dd>
-		</dl>
 
 		<h2 id="DIFF2">HSP2との違いについて</h2>
 		<p>
