ドキュメントの更新
Former-commit-id: 019d22a8d9a40d8460ee5f43f214d272b43e58c4

--- a/package/win32/doclib/hsp3dish_js.htm
+++ b/package/win32/doclib/hsp3dish_js.htm
@@ -25,6 +25,7 @@
 		<li><a href="#CONVERT">HSP3Dish Helperによる変換</a></li>
 		<li><a href="#BROWSE">ブラウザ上での実行</a></li>
 		<li><a href="#SCRSIZE">表示サイズのスケーリング</a></li>
+		<li><a href="#MEDIA">メディアファイルの再生</a></li>
 		<li><a href="#NOTICE">制限事項・既知の問題点</a></li>
 		<li><a href="#FUTURE">今後の予定</a></li>
 		<li><a href="#LICENSE">ライセンス・謝辞</a></li>
@@ -166,19 +167,36 @@
 	</pre></ul>
 
 
+	<h2 id="MEDIA">メディアファイルの再生</h2>
+	<p>
+	現在のバージョンでは、メディアファイル再生に関して試験的な対応となっています。
+	</p>
+	<ul><pre>
+		・wav,ogg形式の再生に対応しています(mmload,mmplay命令)
+		・Chrome及び、Firefox上での動作を確認しています
+		・IE11上では動作しません(エラーにはなりません)
+		・mci命令には対応していません
+		・動画の再生には対応していません
+	</pre></ul>
+	<p>
+	メディアファイルはリソースとして膨大なサイズになる場合があるため、起動時にすべてメモリに読み込む現在のリソース管理では、大量の楽曲を流す処理には向いていません。
+	今後のバージョンでは改良していきたいと考えています。
+	</p>
+
+
 	<h2 id="NOTICE">制限事項・既知の問題点</h2>
 	<p>
 	現在のバージョンでは、以下の制限事項があります。
 	それ以外の機能については、基本的にHSP3Dishと同等となります。
 	</p>
 	<ul><pre>
-		・メディア関連の機能(mmload,mmplay,mci等)
-		・exec,dialog命令
-		・OBAQのサポート
-		・HGIMG4のサポート
-		・マルチタッチのサポート
-		・DPMファイルからの読み込み
-		・ファイルの静的な保存
+		・メディア関連の機能(ブラウザ、ファイルタイプによる制限あり)
+		・exec,dialog命令(未サポート)
+		・OBAQプラグインの命令は未サポート
+		・HGIMG4命令は未サポート
+		・マルチタッチ未サポート
+		・DPMファイルは使用できません
+		・bsave命令などファイルの静的な保存はできません
 	</pre></ul>
 	<p>
 	また、既知の問題として以下が報告されています。
