HSP3.4RC1パッケージの調整
Former-commit-id: 6ef136085a6bd6c0dd3b2f79de6d83bdc174f12a

--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -282,6 +282,7 @@
 	PLATFORM_WINDOWS    0   Windows”Å
 	PLATFORM_IOS        1   iOS”Å
 	PLATFORM_ANDROID    2   android”Å
+	PLATFORM_WEBGL      3   hsp3dish.js(WebGL/JavaScript)”Å
 	</pre>
 
 
