hsp3dish.js関連の修正
Former-commit-id: 17c7a793c506287a018e340b232a2aed3a1409fd

--- a/package/win32/doclib/hsp3dish_js.htm
+++ b/package/win32/doclib/hsp3dish_js.htm
@@ -141,7 +141,7 @@
 
 	<h2 id="SCRSIZE">表示サイズのスケーリング</h2>
 	<p>
-	htmlファイルを編集することで、表示サイズ及びスケーリングの設定を行なうことができます。
+	htmlファイルを編集することで、表示サイズ、スケーリングその他の設定を行なうことができます。
 	生成された、.htmlファイルをテキストエディタで開き、以下の場所を編集してください。
 	</p>
 	<ul><pre>
@@ -151,6 +151,8 @@
 	        ENV.HSP_SX = "480";//表示解像度
 	        ENV.HSP_SY = "800";
 	        ENV.HSP_AUTOSCALE = "0";//スケーリングモード
+	        ENV.HSP_FPS = "0";//フレームレート
+	        ENV.HSP_LIMIT_STEP = "5000";//ブラウザに処理を返すまでの実行ステップ数
 	    });
 	</pre></ul>
 	<p>
@@ -165,6 +167,11 @@
 		2 : Y方向のサイズを基準に拡大縮小(縦横比は維持)
 		3 : 縦横比は無視して画面全体に表示
 	</pre></ul>
+	<p>
+	その他のオプションも、以下の通り設定することができます。<br>
+	「HSP_FPS」で固定のフレームレートを指定します。30の場合は30FPS(30/1000秒)で更新を行ないます。0(デフォルト)の場合は、フレーム数をブラウザに任せます(requestAnimationFrame)。<br>
+	「HSP_LIMIT_STEP」は、強制的にブラウザに処理を返すまでの実行ステップ数を指定します。デフォルトで「5000」が指定されています。あまり大きいとスクリプトや処理系に問題が有った時にブラウザが固まってしまうので注意してください。
+	</p>
 
 
 	<h2 id="MEDIA">メディアファイルの再生</h2>
@@ -202,7 +209,7 @@
 	また、既知の問題として以下が報告されています。
 	</p>
 	<ul><pre>
-		・IE11でcircle命令が動作しない
+		・IE11でマルチメディア関連の命令が動作しない
 	</pre></ul>
 	<p>
 	その他、WEBブラウザ上で動作していることから、異なる動作、表示が行われる可能性があります。
