--- a/package/win32/hsp3js/template.html
+++ b/package/win32/hsp3js/template.html
@@ -308,6 +308,8 @@ function assert(check, msg) {
         ENV.HSP_SX = "$$$dispsize_x$$$";//表示解像度
         ENV.HSP_SY = "$$$dispsize_y$$$";
         ENV.HSP_AUTOSCALE = "0";//スケーリングモード
+        ENV.HSP_FPS = "0";//フレームレート
+        ENV.HSP_LIMIT_STEP = "5000";//ブラウザに処理を返すまでの実行ステップ数
     });
 
 $$$datarequest$$$
