HSP3Dishのnote系命令で行数を間違える不具合を修正 HSP3Dishのandroid版をNDK r10対応に修正 x64コンパイル用のプロジェクトファイル(VS2013)を追加
Former-commit-id: 052bf502ee90757748a38e194b3121af6565209b

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -74,7 +74,7 @@
 	<li>Android NDK（Native Development Kit）開発環境 → <a href="http://developer.android.com/sdk/ndk/index.html" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
 	最新版のWindows版zipアーカイブを任意のフォルダに解凍してください。推奨フォルダは、「c:\android\android-ndk～」です。
-	(動作確認済みのバージョンは、r7,r8,r9です)
+	(動作確認済みのバージョンは、r10です)
 	</p></ul>
 	<li>Apache Ant(開発補助ツール) → <a href="http://www.jajakarta.org/ant/ant-1.6.1/docs/ja/" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
